--- a/Barrio1/Views/InventarioPage.xaml
+++ b/Barrio1/Views/InventarioPage.xaml
@@ -10,72 +10,37 @@
     BackgroundColor="#2D2D2D"
     >
     <ContentPage.Behaviors>
-        <toolkit:EventToCommandBehavior Command="{Binding GetInventarioCommand}" EventName="Appearing"/>
-        <toolkit:EventToCommandBehavior Command="{Binding GetBarrilesCommand}" EventName="Appearing"/>
+        <toolkit:EventToCommandBehavior Command="{Binding GetInventarioCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
-    <ScrollView>
-        <Grid Padding="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="130" />
-                <ColumnDefinition Width="130" />
-                <ColumnDefinition Width="130" />
-            </Grid.ColumnDefinitions>
+    
+    <Grid RowDefinitions="*,*" ColumnDefinitions="*,*">
+        <StackLayout Grid.Row="0">
+            <Label Text="Botellas"/>
+            <CollectionView ItemsSource="{Binding InventarioBo}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Botellas">
+                        
+                        <Grid Grid.Row="1" Grid.Column="0" ColumnDefinitions="*,*">
+                            <Label Grid.Column="0" Text="{Binding nombreBo}"/>
+                            <Label Grid.Column="1" Text="{Binding cantidadBo}"/>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+        <StackLayout Grid.Row="1">
+            <Label Text="Barriles"/>
+            <CollectionView ItemsSource="{Binding InventarioBa}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Barriles">
+                        <Grid Grid.Row="3" Grid.Column="0" ColumnDefinitions="*,*">
+                            <Label Grid.Column="0" Text="{Binding nombreBa}" />
+                            <Label Grid.Column="1" Text="{Binding cantidadBa}"/>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+    </Grid>
 
-            <Label Text="" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="Botellas" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="Barriles" Grid.Column="2" Grid.Row="0" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Llanerita" Grid.Column="0" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockLlane}" Grid.Column="1" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaLlane}" Grid.Column="2" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Maleficio" Grid.Column="0" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockMale}" Grid.Column="1" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaMale}" Grid.Column="2" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="San juanera" Grid.Column="0" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockSJ}" Grid.Column="1" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaSJ}" Grid.Column="2" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Barrio 21" Grid.Column="0" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockB21}" Grid.Column="1" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaB21}" Grid.Column="2" Grid.Row="4" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Barranqueña" Grid.Column="0" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBarra}" Grid.Column="1" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaBarra}" Grid.Column="2" Grid.Row="5" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Toloachi" Grid.Column="0" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockTolo}" Grid.Column="1" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaTolo}" Grid.Column="2" Grid.Row="6" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Genesis" Grid.Column="0" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockGen}" Grid.Column="1" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaGen}" Grid.Column="2" Grid.Row="7" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Celi" Grid.Column="0" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockCeli}" Grid.Column="1" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaCeli}" Grid.Column="2" Grid.Row="8" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-
-            <Label Text="Guasanta" Grid.Column="0" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockGuasanta}" Grid.Column="1" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-            <Label Text="{Binding StockBaGuasanta}" Grid.Column="2" Grid.Row="9" HorizontalOptions="CenterAndExpand" TextColor="White"/>
-        </Grid>
-    </ScrollView>
 </ContentPage>
