--- a/Barrio1/Views/VentasListingPage.xaml
+++ b/Barrio1/Views/VentasListingPage.xaml
@@ -25,7 +25,7 @@
         RowSpacing="20">
 
         <!-- Encabezado -->
-        <Grid Grid.Row="0" ColumnDefinitions="*,Auto,Auto" RowDefinitions="*,Auto,Auto">
+        <Grid Grid.Row="0" ColumnDefinitions="*,Auto,Auto" RowDefinitions="*,Auto">
             <Label
                 Grid.Column="0"
                 FontAttributes="Bold"
@@ -50,22 +50,16 @@
 
 
             <!-- Filtro de fechas -->
-            <Picker
-                Grid.Row="1"
-                Grid.Column="0"
-                x:Name="MesPicker"
-                ItemsSource="{Binding Meses}"
-                SelectedItem="{Binding MesSeleccionado}"
-                TextColor="White"
-                WidthRequest="120" />
-            <Picker
-                Grid.Row="1"
-                    Grid.Column="1"
-                    x:Name="AnoPicker"
-                    ItemsSource="{Binding Anos}"
-                    SelectedItem="{Binding AnoSeleccionado}"
-                    TextColor="White"
-                    WidthRequest="120" />
+
+            <DatePicker Grid.Row="1" Grid.Column="1"
+                        x:Name="DatePicker"
+                        Format="MM yyyy"
+                        MaximumDate="{Binding MaxDate}"
+                        MinimumDate="{Binding MinDate}"
+                        Date="{Binding SelectedDate}">
+
+            </DatePicker>
+            
             <Button
                     Grid.Row="1"
                     Grid.Column="2"
